--- a/2lab/lab2.html
+++ b/2lab/lab2.html
@@ -16,11 +16,11 @@
 		<a href="#close" class="close">x</a>
 		<form action="lab2.html" method="post">
 			<center>
-				<input type="text" name="familia" placeholder="Фамилия" required title="Фамилия должена содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-Я]{1,}[а-я]{3,15}"></input>
+				<input type="text" name="familia" placeholder="Фамилия" required title="Фамилия должена содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-ЯЁ]{1}[а-яё]{3,15}"></input>
 				<p></p>
-				<input type="text" name="name" placeholder="Имя" required title="Имя должено содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-Я]{1,}[а-я]{3,15}"></input>	
+				<input type="text" name="name" placeholder="Имя" required title="Имя должено содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-ЯЁ]{1}[а-яё]{3,15}"></input>	
 				<p></p>
-				<input type="text" name="otchestfo" placeholder="Отчество" required title="Отчество должено содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-Я]{1,}[а-я]{3,20}"></input>
+				<input type="text" name="otchestfo" placeholder="Отчество" required title="Отчество должено содержать только русские символы и начинаться с заглавной буквы!" pattern="[А-ЯЁ]{1}[а-яё]{3,20}"></input>
 				<p></p>
 				<input type="email" name="email" placeholder="email@mail.com" required></input>
 				<p></p>
